--- a/trabalho_ap2/index.html
+++ b/trabalho_ap2/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho AP2</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body  id="body">
+    <div id="grid-login">
+        <div id="divTitulo">
+            <h1>Atletas Botafogo 2024-1</h1>
+            <h4>Aluno: Bernardo Bonzoumet James</h4>
+        </div>
+        <div id="divSenha">
+            <label>
+                Senha:
+                <input type="password" id="senha">
+            </label>
+            <button id="btn_login">Entrar</button>
+            <div id="mensagem"></div>
+        </div>
+    </div>
 </body>
 </html>
