--- a/trabalho_ap2/index.html
+++ b/trabalho_ap2/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho AP2</title>
+    <script src="sha256.js"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body  id="body">
+<body>
     <div id="grid-login">
         <div id="divTitulo">
             <h1>Atletas Botafogo 2024-1</h1>
@@ -19,6 +20,7 @@
                 <input type="password" id="senha">
             </label>
             <button id="btn_login">Entrar</button>
+            <P>A senha é: vascogigante</P>
             <div id="mensagem"></div>
         </div>
     </div>
