--- a/trabalho_ap2/index.html
+++ b/trabalho_ap2/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div id="grid-login">
-        <div id="divTitulo">
+        <div id="div-titulo">
             <h1>Atletas Botafogo 2024-1</h1>
             <h4>Aluno: Bernardo Bonzoumet James</h4>
         </div>
-        <div id="divSenha">
+        <div id="div-senha">
             <label>
                 Senha:
                 <input type="password" id="senha">
